# ChatGPT-Codex-Testing

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci-cd.yml
aiohttp/: __init__.py
backend/: .env.example  nest-cli.json  package.json  tsconfig.json
backend/apps/api/src/: app.module.ts  main.ts
backend/libs/agents/: tsconfig.lib.json
backend/libs/agents/src/: agents.controller.ts  agents.module.ts  agents.service.ts  index.ts
backend/libs/audit/src/: audit.module.ts
backend/libs/auth/src/: auth.controller.ts  auth.service.ts  index.ts
backend/libs/chat/src/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts  index.ts
backend/libs/common/src/: common.module.ts  index.ts
backend/libs/llm/: tsconfig.lib.json
backend/prisma/: schema.prisma  seed.ts
docs/: API.md  ARCHITECTURE.md  ASSUMPTIONS.md  DATA_MODEL.md  DEPLOYMENT.md  SECURITY.md  TESTING.md
dotenv/: __init__.py
feedparser/: __init__.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/app/: layout.tsx
frontend/app/login/: page.tsx
frontend/lib/: api-client.ts
frontend/lib/store/: auth-store.ts
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
infra/k8s/: api-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  worker-deployment.yaml
openai/: __init__.py
ti_osint_pipeline/: __init__.py  __main__.py  config.py  core.py  gui.py  logging_cfg.py
ti_osint_pipeline/tests/: test_core.py
(+34 files in other folders)
