[project]
name = "ti_osint_pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "feedparser==6.0.10",
    "python-dotenv==1.0.1",
    "openai==0.27.8"
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
